force-app/main/default/objects/Absence_Registration__c/fields/Internal_additional_information__c.field-meta.xml
<CustomField>
    <fullName>Internal_additional_information__c</fullName>
    <description>Information for internal use only. OAPPMEDCHECK-470</description>
    <inlineHelpText>Internal information only. Will not be sent to the doctor.</inlineHelpText>
    <label>Internal additional information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>