force-app/main/default/objects/Absence_Registration__c/fields/Interrupted_day__c.field-meta.xml
<CustomField>
    <fullName>Interrupted_day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interrupted day</label>
    <type>Checkbox</type>
</CustomField>