force-app/main/default/objects/Absence_Registration__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>OAPPMEDCHECK-388</description>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Absence Registrations</relationshipLabel>
    <relationshipName>Absence_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>