force-app/main/default/objects/Absence_Registration__c/fields/Invoicing_Account__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoicing Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Absence Registrations (Invoice Account)</relationshipLabel>
    <relationshipName>Invoice_Absence_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>