force-app/main/default/objects/Absence_Registration__c/fields/Invoicing_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_On_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OAPPMEDCHECK-388</description>
    <label>Invoicing On Hold</label>
    <type>Checkbox</type>
</CustomField>