force-app/main/default/objects/Absence_Registration__c/fields/Invoicing_Status__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Status__c</fullName>
    <description>OAPPMEDCHECK-388</description>
    <label>Invoicing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice to generate</fullName>
            </value>
            <value>
                <fullName>Invoice generated</fullName>
            </value>
            <value>
                <fullName>Error during Invoice generation</fullName>
            </value>
            <value>
                <fullName>Prepayment - no invoicing</fullName>
            </value>
            <value>
                <fullName>Manual Process</fullName>
            </value>
            <value>
                <fullName>No invoicing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>