force-app/main/default/objects/Absence_Registration__c/fields/Is_contract_pack__c.field-meta.xml
<CustomField>
    <fullName>Is_contract_pack__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is contract pack</label>
    <type>Checkbox</type>
</CustomField>