force-app/main/default/objects/Absence_Registration__c/fields/IV_Localisation__c.field-meta.xml
<CustomField>
    <fullName>IV_Localisation__c</fullName>
    <label>IV - Localisation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IV_Localisation</valueSetName>
    </valueSet>
</CustomField>