force-app/main/default/objects/Absence_Registration__c/fields/IX_Analyse_blanc_gris_noir__c.field-meta.xml
<CustomField>
    <fullName>IX_Analyse_blanc_gris_noir__c</fullName>
    <label>IX - Analyse blanc - gris - noir</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IX_Analyse_blanc_gris_noir</valueSetName>
    </valueSet>
</CustomField>