force-app/main/default/objects/Absence_Registration__c/fields/Loaded_by_service_xml__c.field-meta.xml
<CustomField>
    <fullName>Loaded_by_service_xml__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OAPPMEDCHECK-509
This field is check when the record is created with the service &quot;AbsenceRegistrationWebService&quot;</description>
    <label>Loaded by service xml</label>
    <type>Checkbox</type>
</CustomField>