force-app/main/default/objects/Absence_Registration__c/fields/Main_Account__c.field-meta.xml
<CustomField>
    <fullName>Main_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>OAPPMEDCHECK-101</description>
    <label>Main Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Absence Registrations (Main Account)</relationshipLabel>
    <relationshipName>Absence_Registrations1</relationshipName>
    <type>Lookup</type>
</CustomField>