force-app/main/default/objects/Absence_Registration__c/fields/Medical_Check_Illness__c.field-meta.xml
<CustomField>
    <fullName>Medical_Check_Illness__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the goal of the absence registration. US-OAPPMEDCHECK-226</description>
    <label>Medical Check - Illness</label>
    <type>Checkbox</type>
</CustomField>