force-app/main/default/objects/Absence_Registration__c/fields/Medical_check_reason__c.field-meta.xml
<CustomField>
    <fullName>Medical_check_reason__c</fullName>
    <description>Automatically populated by trigger on absence registration</description>
    <label>Medical check reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>