force-app/main/default/objects/Absence_Registration__c/fields/MessageType__c.field-meta.xml
<CustomField>
    <fullName>MessageType__c</fullName>
    <description>Created to map the received info from the XML, in order to be future proof in case the info would be needed in the future.
See OAPPMEDCHECK-104</description>
    <label>MessageType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>