force-app/main/default/objects/Absence_Registration__c/fields/Migrated__c.field-meta.xml
<CustomField>
    <fullName>Migrated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this checkbox is ticked, the process doesn&apos;t calculate.
OAPPMEDCHECK-562</description>
    <label>Migrated</label>
    <type>Checkbox</type>
</CustomField>