force-app/main/default/objects/Absence_Registration__c/fields/Name_on_bell__c.field-meta.xml
<CustomField>
    <fullName>Name_on_bell__c</fullName>
    <label>Name on bell</label>
    <length>80</length>
    <type>Text</type>
</CustomField>