force-app/main/default/objects/Absence_Registration__c/fields/Nbre_de_contre_visites__c.field-meta.xml
<CustomField>
    <fullName>Nbre_de_contre_visites__c</fullName>
    <description>US 500 - Rapport d&apos;activité client
Champ permettant de compter le nombre de SA liés à une absence
Utile pour le reporting</description>
    <label>Nombre de contre-visites</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>