force-app/main/default/objects/Absence_Registration__c/fields/No_create_work_order__c.field-meta.xml
<CustomField>
    <fullName>No_create_work_order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No create work order</label>
    <type>Checkbox</type>
</CustomField>