force-app/main/default/objects/Absence_Registration__c/fields/Notification_channel__c.field-meta.xml
<CustomField>
    <fullName>Notification_channel__c</fullName>
    <description>Operators can indicate via which channel an employee will be notified of a visit. US-OAPPMEDCHECK-156</description>
    <label>Notification channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Lettre suivie</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>