force-app/main/default/objects/Absence_Registration__c/fields/Number_of_extension__c.field-meta.xml
<CustomField>
    <fullName>Number_of_extension__c</fullName>
    <description>US-OAPPMEDCHECK-244</description>
    <label>Number of extension</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>