force-app/main/default/objects/Absence_Registration__c/fields/Numbers_of_Kilometers__c.field-meta.xml
<CustomField>
    <fullName>Numbers_of_Kilometers__c</fullName>
    <description>US 259 &amp;&amp; 404
Distance traveled by the doctor to go to the employee&apos;s home</description>
    <label>Numbers of Kilometers</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>