force-app/main/default/objects/Absence_Registration__c/fields/On_hold__c.field-meta.xml
<CustomField>
    <fullName>On_hold__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-OAPPMEDCHECK-226</description>
    <label>On hold</label>
    <type>Checkbox</type>
</CustomField>