force-app/main/default/objects/Absence_Registration__c/fields/Optimal_MC__c.field-meta.xml
<CustomField>
    <fullName>Optimal_MC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OAPPMEDCHECK-99</description>
    <label>Optimal MC</label>
    <type>Checkbox</type>
</CustomField>