force-app/main/default/objects/Absence_Registration__c/fields/Post_Stamp_Date__c.field-meta.xml
<CustomField>
    <fullName>Post_Stamp_Date__c</fullName>
    <label>Post Stamp Date</label>
    <type>Date</type>
</CustomField>