force-app/main/default/objects/Absence_Registration__c/fields/Postal_code__c.field-meta.xml
<CustomField>
    <fullName>Postal_code__c</fullName>
    <label>Postal code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>