force-app/main/default/objects/Absence_Registration__c/fields/Prolongation__c.field-meta.xml
<CustomField>
    <fullName>Prolongation__c</fullName>
    <description>OAPPMEDCHECK-416 : New Fields on Absence &amp; SA-level (Be)</description>
    <label>Prolongation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>00</fullName>
                <label>No</label>
            </value>
            <value>
                <fullName>01</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>NA</fullName>
                <label>Blanco</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>