force-app/main/default/objects/Absence_Registration__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>00</fullName>
                <label>Illness</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Work accident</label>
            </value>
            <value>
                <fullName>40</fullName>
                <label>Occupational disease</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Commuting accident</label>
            </value>
            <value>
                <fullName>01</fullName>
                <label>Personal accident</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>Sports injury</label>
            </value>
            <value>
                <fullName>50</fullName>
                <label>Hospitalisation</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Reduced performance</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Pension commission</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Maternity Leave</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>Paternity Leave</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>