force-app/main/default/objects/Absence_Registration__c/fields/Reason_closure__c.field-meta.xml
<CustomField>
    <fullName>Reason_closure__c</fullName>
    <description>OAPPMEDCHECK-98
Why the workorder is created or not</description>
    <label>Reason closure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MC requested by employer on employee level</fullName>
            </value>
            <value>
                <fullName>Exempt from MC by employer on employee level</fullName>
            </value>
            <value>
                <fullName>MC requested by employer on absence registration</fullName>
            </value>
            <value>
                <fullName>Exempt from MC by employer on absence registration</fullName>
            </value>
            <value>
                <fullName>No criteria fit to execute MC</fullName>
            </value>
            <value>
                <fullName>Criteria decided no MC</fullName>
            </value>
            <value>
                <fullName>Criteria decided to execute MC</fullName>
            </value>
            <value>
                <fullName>No need for MC - absence fully in past</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>