force-app/main/default/objects/Absence_Registration__c/fields/Reason_not_executed__c.field-meta.xml
<CustomField>
    <fullName>Reason_not_executed__c</fullName>
    <description>OAPPMEDCHECK-416 : New Fields on Absence &amp; SA-level (Be)
OAPPMEDCHECK-894</description>
    <label>Reason not executed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Annulation by force major</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Mission not received by the doctor</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Inaccessible address</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Cancellation by doctor: Own patient/acquaintance/family</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>Cancellation due to lack of time or distance too great</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>Annulation by employer</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>Annulation by Securex (due to duplication)</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>Control of the wrong person</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>No doctor in the area</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Received request MC too late</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Wrong address</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>No need for MC - absence too late processed by Securex</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Criteria decided not to execute MC</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Exemption for control</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>