force-app/main/default/objects/Absence_Registration__c/fields/Reason_of_cancellation__c.field-meta.xml
<CustomField>
    <fullName>Reason_of_cancellation__c</fullName>
    <description>OAPPMEDCHECK-651 : Fields concerning &quot;Raison annulation&quot; (Fr)</description>
    <label>Reason of cancellation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AC Therapeutic half-time</fullName>
            </value>
            <value>
                <fullName>AC Employee error to be controlled</fullName>
            </value>
            <value>
                <fullName>AC Covid</fullName>
            </value>
            <value>
                <fullName>AC Resumption of Work</fullName>
            </value>
            <value>
                <fullName>AC Hospitalization</fullName>
            </value>
            <value>
                <fullName>AC Resignation or departure</fullName>
            </value>
            <value>
                <fullName>AC Absence from work</fullName>
            </value>
            <value>
                <fullName>AC Miscellaneous</fullName>
            </value>
            <value>
                <fullName>AC Delay too long</fullName>
            </value>
            <value>
                <fullName>AC Address inaccurate or missing code</fullName>
            </value>
            <value>
                <fullName>AC Imperative date</fullName>
            </value>
            <value>
                <fullName>AC No compensation</fullName>
            </value>
            <value>
                <fullName>AC Extra kilometers</fullName>
            </value>
            <value>
                <fullName>AC Out of stock</fullName>
            </value>
            <value>
                <fullName>AC Pending and no action</fullName>
            </value>
            <value>
                <fullName>AS No doctors</fullName>
            </value>
            <value>
                <fullName>AS Physician leave</fullName>
            </value>
            <value>
                <fullName>AS Forgotten doctor</fullName>
            </value>
            <value>
                <fullName>AS Unsafe area</fullName>
            </value>
            <value>
                <fullName>AS Time limit too short</fullName>
            </value>
            <value>
                <fullName>AS Imperative date</fullName>
            </value>
            <value>
                <fullName>AS Request received on weekends</fullName>
            </value>
            <value>
                <fullName>AS Employee already checked on same stop</fullName>
            </value>
            <value>
                <fullName>AS Miscellaneous</fullName>
            </value>
            <value>
                <fullName>AS File not processed</fullName>
            </value>
            <value>
                <fullName>AS Error in transmission to doctor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>