force-app/main/default/objects/Absence_Registration__c/fields/Reason_on_hold__c.field-meta.xml
<CustomField>
    <fullName>Reason_on_hold__c</fullName>
    <description>This technical field set the reason of the on hold when a absence is blocked by the process
related us: OAPPMEDCHECK-493</description>
    <label>Reason on hold</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No_contract_active_or_multiple_contract_active</fullName>
            </value>
            <value>
                <fullName>Unable_to_evaluate_custom_criteria</fullName>
            </value>
            <value>
                <fullName>Blocked_by_invoicing</fullName>
            </value>
            <value>
                <fullName>Blocked_by_services</fullName>
            </value>
            <value>
                <fullName>Blocked_by_pack_empty</fullName>
            </value>
            <value>
                <fullName>Protest_certificate</fullName>
            </value>
            <value>
                <fullName>Additional_information_on_certificate</fullName>
            </value>
            <value>
                <fullName>Execute_control_with_absence_in_past</fullName>
            </value>
            <value>
                <fullName>Employee_might_be_back_to_work</fullName>
            </value>
            <value>
                <fullName>Unable_to_evaluate_if_MC</fullName>
            </value>
            <value>
                <fullName>Protest_certificate_of_longer_duration_or_other_reason</fullName>
            </value>
            <value>
                <fullName>Absence_is_a_protest_certificate_please_treat_manually</fullName>
            </value>
            <value>
                <fullName>No_Invoicing_Account</fullName>
            </value>
            <value>
                <fullName>Contract_service_home_visit_missing_or_no_price_for_this_service</fullName>
            </value>
            <value>
                <fullName>Contract_service_office_visit_missing_or_no_price_for_this_service</fullName>
            </value>
            <value>
                <fullName>MC_Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>