force-app/main/default/objects/Absence_Registration__c/fields/Reduced_equivalent__c.field-meta.xml
<CustomField>
    <fullName>Reduced_equivalent__c</fullName>
    <label>Reduced equivalent</label>
    <length>80</length>
    <type>Text</type>
</CustomField>