force-app/main/default/objects/Absence_Registration__c/fields/Remaining_MC__c.field-meta.xml
<CustomField>
    <fullName>Remaining_MC__c</fullName>
    <label>Remaining MC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>