force-app/main/default/objects/Absence_Registration__c/fields/Request_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Request_Date_and_Time__c</fullName>
    <description>This field contains the date and time when a customer created the xml to log an absence. This can be compared to the creation date on the absence registration to have a view on the delay between creation of the xml and arrival/processing on the server.</description>
    <label>Request Date and Time</label>
    <type>DateTime</type>
</CustomField>