force-app/main/default/objects/Absence_Registration__c/fields/Request_Time__c.field-meta.xml
<CustomField>
    <fullName>Request_Time__c</fullName>
    <label>Request Time</label>
    <type>Time</type>
</CustomField>