force-app/main/default/objects/Absence_Registration__c/fields/Result_Code__c.field-meta.xml
<CustomField>
    <fullName>Result_Code__c</fullName>
    <description>US 259 - 396 - 405
The result code after the doctor&apos;s conclusion.
To be used in the transmission XML</description>
    <label>Result Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - In accordance</fullName>
            </value>
            <value>
                <fullName>1 - In disagreement</fullName>
            </value>
            <value>
                <fullName>2 - Lost expertise</fullName>
            </value>
            <value>
                <fullName>3 - Won expertise</fullName>
            </value>
            <value>
                <fullName>4 - No illness or accident</fullName>
            </value>
            <value>
                <fullName>5 - Decision maintained with new certificate</fullName>
            </value>
            <value>
                <fullName>6 - In accordance for visit day</fullName>
            </value>
            <value>
                <fullName>7 - Not in accordance for visit date</fullName>
            </value>
            <value>
                <fullName>8 - Early resumption in agreement with attending physician</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>