force-app/main/default/objects/Absence_Registration__c/fields/Result_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Result_End_Date__c</fullName>
    <description>US 259
The real end date after doctor&apos;s conlusion</description>
    <inlineHelpText>Real end date after conlusion
No attestation + Agreement OR Disagreement =&gt; End date absence = End date today
Attestion in possession + Doctor Agreement =&gt; End date = End date certificate
Attestion in possession + Doctor Disagreement =&gt; No action yet</inlineHelpText>
    <label>Result End Date</label>
    <type>Date</type>
</CustomField>