force-app/main/default/objects/Absence_Registration__c/fields/Securex_Number_main_account__c.field-meta.xml
<CustomField>
    <fullName>Securex_Number_main_account__c</fullName>
    <formula>IF(ISPICKVAL(Account__r.Account_Level__c,&quot;Department&quot;), Account__r.Parent_Securex_Number__c, Account__r.Securex_Number__c)</formula>
    <label>Securex Number main account</label>
    <type>Text</type>
</CustomField>