force-app/main/default/objects/Absence_Registration__c/fields/Share_to_MCM_BE__c.field-meta.xml
<CustomField>
    <fullName>Share_to_MCM_BE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OAPPMEDCHECK-455 IAM - Internal users Fr en Be (seperated sharing BE/FR)</description>
    <label>Share to MCM BE</label>
    <type>Checkbox</type>
</CustomField>