force-app/main/default/objects/Absence_Registration__c/fields/Share_to_MCM_FR__c.field-meta.xml
<CustomField>
    <fullName>Share_to_MCM_FR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OAPPMEDCHECK-455 Internal users Fr en Be (seperated sharing BE/FR).</description>
    <label>Share to MCM FR</label>
    <type>Checkbox</type>
</CustomField>