force-app/main/default/objects/Absence_Registration__c/fields/Simulation__c.field-meta.xml
<CustomField>
    <fullName>Simulation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OAPPMEDCHECK-525
Simulate an absence registration to know if there is a control</description>
    <label>Simulation</label>
    <type>Checkbox</type>
</CustomField>