force-app/main/default/objects/Absence_Registration__c/fields/Simulation_calculated__c.field-meta.xml
<CustomField>
    <fullName>Simulation_calculated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OAPPMEDCHECK-525
Unable to know if the flow is from next page or previous. This work around tick the checkbox when the flow is next/previous</description>
    <label>Simulation calculated</label>
    <type>Checkbox</type>
</CustomField>