force-app/main/default/objects/Absence_Registration__c/fields/Single_day_absence__c.field-meta.xml
<CustomField>
    <fullName>Single_day_absence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Single day absence</label>
    <type>Checkbox</type>
</CustomField>