force-app/main/default/objects/Absence_Registration__c/fields/Specific_Contract__c.field-meta.xml
<CustomField>
    <fullName>Specific_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Specific Contract</label>
    <referenceTo>Contract_Home__c</referenceTo>
    <relationshipLabel>Absence Registrations (Specific Contract)</relationshipLabel>
    <relationshipName>Specific_Contract</relationshipName>
    <type>Lookup</type>
</CustomField>