force-app/main/default/objects/Absence_Registration__c/fields/Spontaneous_resumption_date__c.field-meta.xml
<CustomField>
    <fullName>Spontaneous_resumption_date__c</fullName>
    <description>For companies that communicate all their absences, even when employee is back at work</description>
    <label>Spontaneous resumption date</label>
    <type>Date</type>
</CustomField>