force-app/main/default/objects/Absence_Registration__c/fields/Staircase__c.field-meta.xml
<CustomField>
    <fullName>Staircase__c</fullName>
    <label>Staircase</label>
    <length>50</length>
    <type>Text</type>
</CustomField>