force-app/main/default/objects/Absence_Registration__c/fields/Start_date_disease__c.field-meta.xml
<CustomField>
    <fullName>Start_date_disease__c</fullName>
    <label>Start date disease</label>
    <type>Date</type>
</CustomField>