force-app/main/default/objects/Absence_Registration__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
                <default>true</default>
                <label>Received</label>
            </value>
            <value>
                <fullName>Ready for Treatment</fullName>
            </value>
            <value>
                <fullName>Treated - no MC</fullName>
            </value>
            <value>
                <fullName>MC initiated</fullName>
            </value>
            <value>
                <fullName>MC completed</fullName>
            </value>
            <value>
                <fullName>Result to customer</fullName>
            </value>
            <value>
                <fullName>MC canceled</fullName>
            </value>
            <value>
                <fullName>Initiate MC</fullName>
                <isActive>false</isActive>
                <label>Initiate MC</label>
            </value>
            <value>
                <fullName>N/A</fullName>
                <isActive>false</isActive>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Ready for extra checks</fullName>
                <isActive>false</isActive>
                <label>Ready for extra checks</label>
            </value>
            <value>
                <fullName>Run process</fullName>
                <isActive>false</isActive>
                <label>Run process</label>
            </value>
            <value>
                <fullName>Treated - MC initiated</fullName>
                <isActive>false</isActive>
                <label>Treated - MC initiated</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>