force-app/main/default/objects/Absence_Registration__c/fields/Status_MC__c.field-meta.xml
<CustomField>
    <fullName>Status_MC__c</fullName>
    <description>US 424
Status for customer in community</description>
    <label>Status MC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
                <default>true</default>
                <label>Received</label>
            </value>
            <value>
                <fullName>MC ongoing</fullName>
            </value>
            <value>
                <fullName>MC completed</fullName>
            </value>
            <value>
                <fullName>Result to customer</fullName>
            </value>
            <value>
                <fullName>MC canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>