force-app/main/default/objects/Absence_Registration__c/fields/TECH_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>TECH_Close_Date__c</fullName>
    <description>OAPPMEDCHECK-522 AR to be invoiced are those who are closed during the previous month. 
TECH_Close_Date = date where Status changes to Result to customer.</description>
    <label>TECH_Close_Date</label>
    <type>Date</type>
</CustomField>