force-app/main/default/objects/Absence_Registration__c/fields/Tech_Display_exceptional_SLA_warning__c.field-meta.xml
<CustomField>
    <fullName>Tech_Display_exceptional_SLA_warning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox ticked (by trigger on AR) when one of those two fields are filled: Excpetional SLA Department &amp; Exceptional SLA Main Account. FiOAPPMEDCHECK-769</description>
    <label>Tech Display exceptional SLA warning</label>
    <type>Checkbox</type>
</CustomField>