force-app/main/default/objects/Absence_Registration__c/fields/Tech_Flow_ID__c.field-meta.xml
<CustomField>
    <fullName>Tech_Flow_ID__c</fullName>
    <label>Tech Flow ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>