force-app/main/default/objects/Absence_Registration__c/fields/Technical_Status__c.field-meta.xml
<CustomField>
    <fullName>Technical_Status__c</fullName>
    <label>Technical Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready for extra checks</fullName>
            </value>
            <value>
                <fullName>Run process</fullName>
            </value>
            <value>
                <fullName>Initiate MC</fullName>
            </value>
            <value>
                <fullName>Ready for Treatment</fullName>
            </value>
            <value>
                <fullName>MC initiated</fullName>
            </value>
            <value>
                <fullName>Treated - no MC</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>